commit bilingual contents

--- a/docs/docs-ref-autogen/excel/excel.tablechangedeventargs.yml
+++ b/docs/docs-ref-autogen/excel/excel.tablechangedeventargs.yml
@@ -1,17 +1,17 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 9491cb91b3358646466d1c23c104979dc104a055
-ms.sourcegitcommit: 016e17422cf62dc9f1de1809666e9244e41cc1a9
+ms.openlocfilehash: 64b92166089ca9cc026ba28bdcd681e8f8afe63f
+ms.sourcegitcommit: b05ee546d9dfbc914c8d1c594d9b206b04780bbc
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 11/09/2018
-ms.locfileid: "26227665"
+ms.lasthandoff: 11/22/2018
+ms.locfileid: "26646788"
 items:
 - uid: excel.Excel.TableChangedEventArgs
   summary: >-
-    <span data-ttu-id="6ff4c-101">提供有关引发 Changed 事件的表的信息。</span><span class="sxs-lookup"><span data-stu-id="6ff4c-101">Provides information about the table that raised the Changed event.</span></span>
+    <span data-ttu-id="ea644-101">提供有关引发 Changed 事件的表的信息。</span><span class="sxs-lookup"><span data-stu-id="ea644-101">Provides information about the table that raised the Changed event.</span></span>
 
 
-    <span data-ttu-id="6ff4c-102">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="6ff4c-102">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="ea644-102">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ea644-102">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: Excel.TableChangedEventArgs
   fullName: Excel.TableChangedEventArgs
   langs:
@@ -29,10 +29,10 @@ items:
   - excel.Excel.TableChangedEventArgs.worksheetId
 - uid: excel.Excel.TableChangedEventArgs.address
   summary: >-
-    <span data-ttu-id="6ff4c-103">获取表示特定工作表的表的更改的区域的地址。</span><span class="sxs-lookup"><span data-stu-id="6ff4c-103">Gets the address that represents the changed area of a table on a specific worksheet.</span></span>
+    <span data-ttu-id="ea644-103">获取表示特定工作表的表的更改的区域的地址。</span><span class="sxs-lookup"><span data-stu-id="ea644-103">Gets the address that represents the changed area of a table on a specific worksheet.</span></span>
 
 
-    <span data-ttu-id="6ff4c-104">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="6ff4c-104">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="ea644-104">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ea644-104">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: address
   fullName: address
   langs:
@@ -45,10 +45,10 @@ items:
       - string
 - uid: excel.Excel.TableChangedEventArgs.changeType
   summary: >-
-    <span data-ttu-id="6ff4c-105">获取表示 Changed 事件触发的方式的更改类型。</span><span class="sxs-lookup"><span data-stu-id="6ff4c-105">Gets the change type that represents how the Changed event is triggered.</span></span> <span data-ttu-id="6ff4c-106">有关详细信息，请参阅 Excel.DataChangeType。</span><span class="sxs-lookup"><span data-stu-id="6ff4c-106">See Excel.DataChangeType for details.</span></span>
+    <span data-ttu-id="ea644-105">获取表示 Changed 事件触发的方式的更改类型。</span><span class="sxs-lookup"><span data-stu-id="ea644-105">Gets the change type that represents how the Changed event is triggered.</span></span> <span data-ttu-id="ea644-106">有关详细信息，请参阅 Excel.DataChangeType。</span><span class="sxs-lookup"><span data-stu-id="ea644-106">See Excel.DataChangeType for details.</span></span>
 
 
-    <span data-ttu-id="6ff4c-107">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="6ff4c-107">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="ea644-107">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ea644-107">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: changeType
   fullName: changeType
   langs:
@@ -61,10 +61,10 @@ items:
       - Excel.DataChangeType | "Unknown" | "RangeEdited" | "RowInserted" | "RowDeleted" | "ColumnInserted" | "ColumnDeleted" | "CellInserted" | "CellDeleted"
 - uid: excel.Excel.TableChangedEventArgs.getRange
   summary: >-
-    <span data-ttu-id="6ff4c-108">获取代表特定工作表的表的更改的区域的区域。</span><span class="sxs-lookup"><span data-stu-id="6ff4c-108">Gets the range that represents the changed area of a table on a specific worksheet.</span></span>
+    <span data-ttu-id="ea644-108">获取代表特定工作表的表的更改的区域的区域。</span><span class="sxs-lookup"><span data-stu-id="ea644-108">Gets the range that represents the changed area of a table on a specific worksheet.</span></span>
 
 
-    <span data-ttu-id="6ff4c-109">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="6ff4c-109">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="ea644-109">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ea644-109">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: getRange(ctx)
   fullName: getRange
   langs:
@@ -83,10 +83,10 @@ items:
       - excel.Excel.RequestContext
 - uid: excel.Excel.TableChangedEventArgs.getRangeOrNullObject
   summary: >-
-    <span data-ttu-id="6ff4c-110">获取代表特定工作表的表的更改的区域的区域。</span><span class="sxs-lookup"><span data-stu-id="6ff4c-110">Gets the range that represents the changed area of a table on a specific worksheet.</span></span> <span data-ttu-id="6ff4c-111">它可能会返回 null 对象。</span><span class="sxs-lookup"><span data-stu-id="6ff4c-111">It might return null object.</span></span>
+    <span data-ttu-id="ea644-110">获取代表特定工作表的表的更改的区域的区域。</span><span class="sxs-lookup"><span data-stu-id="ea644-110">Gets the range that represents the changed area of a table on a specific worksheet.</span></span> <span data-ttu-id="ea644-111">它可能会返回 null 对象。</span><span class="sxs-lookup"><span data-stu-id="ea644-111">It might return null object.</span></span>
 
 
-    <span data-ttu-id="6ff4c-112">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="6ff4c-112">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="ea644-112">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ea644-112">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: getRangeOrNullObject(ctx)
   fullName: getRangeOrNullObject
   langs:
@@ -105,10 +105,10 @@ items:
       - excel.Excel.RequestContext
 - uid: excel.Excel.TableChangedEventArgs.source
   summary: >-
-    <span data-ttu-id="6ff4c-113">获取在事件的源。</span><span class="sxs-lookup"><span data-stu-id="6ff4c-113">Gets the source of the event.</span></span> <span data-ttu-id="6ff4c-114">有关详细信息，请参阅 Excel.EventSource。</span><span class="sxs-lookup"><span data-stu-id="6ff4c-114">See Excel.EventSource for details.</span></span>
+    <span data-ttu-id="ea644-113">获取在事件的源。</span><span class="sxs-lookup"><span data-stu-id="ea644-113">Gets the source of the event.</span></span> <span data-ttu-id="ea644-114">有关详细信息，请参阅 Excel.EventSource。</span><span class="sxs-lookup"><span data-stu-id="ea644-114">See Excel.EventSource for details.</span></span>
 
 
-    <span data-ttu-id="6ff4c-115">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="6ff4c-115">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="ea644-115">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ea644-115">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: source
   fullName: source
   langs:
@@ -121,10 +121,10 @@ items:
       - Excel.EventSource | "Local" | "Remote"
 - uid: excel.Excel.TableChangedEventArgs.tableId
   summary: >-
-    <span data-ttu-id="6ff4c-116">获取更改的数据的表的 id。</span><span class="sxs-lookup"><span data-stu-id="6ff4c-116">Gets the id of the table in which the data changed.</span></span>
+    <span data-ttu-id="ea644-116">获取更改的数据的表的 id。</span><span class="sxs-lookup"><span data-stu-id="ea644-116">Gets the id of the table in which the data changed.</span></span>
 
 
-    <span data-ttu-id="6ff4c-117">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="6ff4c-117">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="ea644-117">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ea644-117">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: tableId
   fullName: tableId
   langs:
@@ -135,13 +135,13 @@ items:
     return:
       type:
       - string
-      description: "\n#### <a name=\"examples\"></a><span data-ttu-id=\"6ff4c-118\">示例</span><span class=\"sxs-lookup\"><span data-stu-id=\"6ff4c-118\">Examples</span></span>\n\n```typescript\nasync function onChange(event) {\n    await Excel.run(async (context) => {\n        let table = context.workbook.tables.getItem(event.tableId);\n        let worksheet = context.workbook.worksheets.getItem(event.worksheetId);\n        worksheet.load(\"name\");\n\n        await context.sync();\n\n        console.log(\"Handler for table collection onChanged event has been triggered.  Data changed address : \" + event.address);\n        console.log(\"Table Id : \" + event.tableId);\n        console.log(\"Worksheet Id : \" + worksheet.name);\n    });\n}\n```"
+      description: "\n#### <a name=\"examples\"></a><span data-ttu-id=\"ea644-118\">示例</span><span class=\"sxs-lookup\"><span data-stu-id=\"ea644-118\">Examples</span></span>\n\n```typescript\nasync function onChange(event) {\n    await Excel.run(async (context) => {\n        let table = context.workbook.tables.getItem(event.tableId);\n        let worksheet = context.workbook.worksheets.getItem(event.worksheetId);\n        worksheet.load(\"name\");\n\n        await context.sync();\n\n        console.log(\"Handler for table collection onChanged event has been triggered. Data changed address: \" + event.address);\n        console.log(\"Table Id : \" + event.tableId);\n        console.log(\"Worksheet Id : \" + worksheet.name);\n    });\n}\n```"
 - uid: excel.Excel.TableChangedEventArgs.type
   summary: >-
-    <span data-ttu-id="6ff4c-119">获取该事件的类型。</span><span class="sxs-lookup"><span data-stu-id="6ff4c-119">Gets the type of the event.</span></span> <span data-ttu-id="6ff4c-120">有关详细信息，请参阅 Excel.EventType。</span><span class="sxs-lookup"><span data-stu-id="6ff4c-120">See Excel.EventType for details.</span></span>
+    <span data-ttu-id="ea644-119">获取该事件的类型。</span><span class="sxs-lookup"><span data-stu-id="ea644-119">Gets the type of the event.</span></span> <span data-ttu-id="ea644-120">有关详细信息，请参阅 Excel.EventType。</span><span class="sxs-lookup"><span data-stu-id="ea644-120">See Excel.EventType for details.</span></span>
 
 
-    <span data-ttu-id="6ff4c-121">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="6ff4c-121">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="ea644-121">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ea644-121">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: type
   fullName: type
   langs:
@@ -154,10 +154,10 @@ items:
       - "\"TableChanged\""
 - uid: excel.Excel.TableChangedEventArgs.worksheetId
   summary: >-
-    <span data-ttu-id="6ff4c-122">获取更改的数据在工作表的 id。</span><span class="sxs-lookup"><span data-stu-id="6ff4c-122">Gets the id of the worksheet in which the data changed.</span></span>
+    <span data-ttu-id="ea644-122">获取更改的数据在工作表的 id。</span><span class="sxs-lookup"><span data-stu-id="ea644-122">Gets the id of the worksheet in which the data changed.</span></span>
 
 
-    <span data-ttu-id="6ff4c-123">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="6ff4c-123">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="ea644-123">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ea644-123">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: worksheetId
   fullName: worksheetId
   langs:
@@ -168,4 +168,4 @@ items:
     return:
       type:
       - string
-      description: "\n#### <a name=\"examples\"></a><span data-ttu-id=\"6ff4c-124\">示例</span><span class=\"sxs-lookup\"><span data-stu-id=\"6ff4c-124\">Examples</span></span>\n\n```typescript\nasync function onChange(event) {\n    await Excel.run(async (context) => {\n        let table = context.workbook.tables.getItem(event.tableId);\n        let worksheet = context.workbook.worksheets.getItem(event.worksheetId);\n        worksheet.load(\"name\");\n\n        await context.sync();\n\n        console.log(\"Handler for table collection onChanged event has been triggered.  Data changed address : \" + event.address);\n        console.log(\"Table Id : \" + event.tableId);\n        console.log(\"Worksheet Id : \" + worksheet.name);\n    });\n}\n```"
+      description: "\n#### <a name=\"examples\"></a><span data-ttu-id=\"ea644-124\">示例</span><span class=\"sxs-lookup\"><span data-stu-id=\"ea644-124\">Examples</span></span>\n\n```typescript\nasync function onChange(event) {\n    await Excel.run(async (context) => {\n        let table = context.workbook.tables.getItem(event.tableId);\n        let worksheet = context.workbook.worksheets.getItem(event.worksheetId);\n        worksheet.load(\"name\");\n\n        await context.sync();\n\n        console.log(\"Handler for table collection onChanged event has been triggered. Data changed address: \" + event.address);\n        console.log(\"Table Id : \" + event.tableId);\n        console.log(\"Worksheet Id : \" + worksheet.name);\n    });\n}\n```"
