--- a/docs/docs-ref-autogen/outlook_1_3/office.mailboxenums.itemtype.yml
+++ b/docs/docs-ref-autogen/outlook_1_3/office.mailboxenums.itemtype.yml
@@ -1,18 +1,18 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: a6e3afcb8a5eaa9395dd0f301004f8426266360a
-ms.sourcegitcommit: 016e17422cf62dc9f1de1809666e9244e41cc1a9
+ms.openlocfilehash: a981b04ec3631c520788dc1ce7f6ef4677dcf8f9
+ms.sourcegitcommit: b05ee546d9dfbc914c8d1c594d9b206b04780bbc
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 11/09/2018
-ms.locfileid: "26226216"
+ms.lasthandoff: 11/22/2018
+ms.locfileid: "26646284"
 items:
 - uid: Outlook_1_3.Office.MailboxEnums.ItemType
   summary: >-
-    <span data-ttu-id="423fa-101">指定项的类型。</span><span class="sxs-lookup"><span data-stu-id="423fa-101">Specifies an item's type.</span></span>
+    <span data-ttu-id="341b8-101">指定项的类型。</span><span class="sxs-lookup"><span data-stu-id="341b8-101">Specifies an item's type.</span></span>
 
 
-    <span data-ttu-id="423fa-102">\[[API 集： 邮箱 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="423fa-102">\[ [API set: Mailbox 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets) \]</span></span>
-  remarks: <table><tr><td> <span data-ttu-id="423fa-103">[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points) </span><span class="sxs-lookup"><span data-stu-id="423fa-103">[ Applicable Outlook mode](https://docs.microsoft.com/outlook/add-ins/#extension-points) </span></span></td><td><span data-ttu-id="423fa-104">撰写或阅读</span><span class="sxs-lookup"><span data-stu-id="423fa-104">Compose or read</span></span></td></tr></table>
+    <span data-ttu-id="341b8-102">\[[API 集： 邮箱 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="341b8-102">\[ [API set: Mailbox 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets) \]</span></span>
+  remarks: <table><tr><td> <span data-ttu-id="341b8-103">[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points) </span><span class="sxs-lookup"><span data-stu-id="341b8-103">[Applicable Outlook mode](https://docs.microsoft.com/outlook/add-ins/#extension-points) </span></span></td><td><span data-ttu-id="341b8-104">撰写或阅读</span><span class="sxs-lookup"><span data-stu-id="341b8-104">Compose or read</span></span></td></tr></table>
   name: Office.MailboxEnums.ItemType
   fullName: Office.MailboxEnums.ItemType
   langs:
@@ -23,7 +23,7 @@ items:
   - Outlook_1_3.Office.MailboxEnums.ItemType.Appointment
   - Outlook_1_3.Office.MailboxEnums.ItemType.Message
 - uid: Outlook_1_3.Office.MailboxEnums.ItemType.Appointment
-  summary: <span data-ttu-id="423fa-105">约会项目。</span><span class="sxs-lookup"><span data-stu-id="423fa-105">An appointment item.</span></span>
+  summary: <span data-ttu-id="341b8-105">约会项目。</span><span class="sxs-lookup"><span data-stu-id="341b8-105">An appointment item.</span></span>
   name: Appointment
   fullName: Appointment
   langs:
@@ -31,7 +31,7 @@ items:
   type: field
   numericValue: "\"appointment\""
 - uid: Outlook_1_3.Office.MailboxEnums.ItemType.Message
-  summary: <span data-ttu-id="423fa-106">电子邮件、会议请求、会议响应或会议取消。</span><span class="sxs-lookup"><span data-stu-id="423fa-106">An email, meeting request, meeting response, or meeting cancellation.</span></span>
+  summary: <span data-ttu-id="341b8-106">电子邮件、会议请求、会议响应或会议取消。</span><span class="sxs-lookup"><span data-stu-id="341b8-106">An email, meeting request, meeting response, or meeting cancellation.</span></span>
   name: Message
   fullName: Message
   langs:
