--- a/docs/docs-ref-autogen/outlook_1_1/office.mailboxenums.entitytype.yml
+++ b/docs/docs-ref-autogen/outlook_1_1/office.mailboxenums.entitytype.yml
@@ -1,18 +1,18 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 8c5a903da45a06d30a6bf5aea4b8288daaee1a52
-ms.sourcegitcommit: 016e17422cf62dc9f1de1809666e9244e41cc1a9
+ms.openlocfilehash: c8e06a07b7b2f85d746f05fff1dc1fc09765c18d
+ms.sourcegitcommit: b05ee546d9dfbc914c8d1c594d9b206b04780bbc
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 11/09/2018
-ms.locfileid: "26236186"
+ms.lasthandoff: 11/22/2018
+ms.locfileid: "26648343"
 items:
 - uid: Outlook_1_1.Office.MailboxEnums.EntityType
   summary: >-
-    <span data-ttu-id="63359-101">指定实体的类型。</span><span class="sxs-lookup"><span data-stu-id="63359-101">Specifies an entity's type.</span></span>
+    <span data-ttu-id="cd9c9-101">指定实体的类型。</span><span class="sxs-lookup"><span data-stu-id="cd9c9-101">Specifies an entity's type.</span></span>
 
 
-    <span data-ttu-id="63359-102">\[[API 集： 邮箱 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="63359-102">\[ [API set: Mailbox 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets) \]</span></span>
-  remarks: <table><tr><td> <span data-ttu-id="63359-103">[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points) </span><span class="sxs-lookup"><span data-stu-id="63359-103">[ Applicable Outlook mode](https://docs.microsoft.com/outlook/add-ins/#extension-points) </span></span></td><td><span data-ttu-id="63359-104">撰写或阅读</span><span class="sxs-lookup"><span data-stu-id="63359-104">Compose or read</span></span></td></tr></table>
+    <span data-ttu-id="cd9c9-102">\[[API 集： 邮箱 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="cd9c9-102">\[ [API set: Mailbox 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets) \]</span></span>
+  remarks: <table><tr><td> <span data-ttu-id="cd9c9-103">[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points) </span><span class="sxs-lookup"><span data-stu-id="cd9c9-103">[Applicable Outlook mode](https://docs.microsoft.com/outlook/add-ins/#extension-points) </span></span></td><td><span data-ttu-id="cd9c9-104">撰写或阅读</span><span class="sxs-lookup"><span data-stu-id="cd9c9-104">Compose or read</span></span></td></tr></table>
   name: Office.MailboxEnums.EntityType
   fullName: Office.MailboxEnums.EntityType
   langs:
@@ -28,7 +28,7 @@ items:
   - Outlook_1_1.Office.MailboxEnums.EntityType.TaskSuggestion
   - Outlook_1_1.Office.MailboxEnums.EntityType.Url
 - uid: Outlook_1_1.Office.MailboxEnums.EntityType.Address
-  summary: <span data-ttu-id="63359-105">指定实体为通讯地址。</span><span class="sxs-lookup"><span data-stu-id="63359-105">Specifies that the entity is a postal address.</span></span>
+  summary: <span data-ttu-id="cd9c9-105">指定实体为通讯地址。</span><span class="sxs-lookup"><span data-stu-id="cd9c9-105">Specifies that the entity is a postal address.</span></span>
   name: Address
   fullName: Address
   langs:
@@ -36,7 +36,7 @@ items:
   type: field
   numericValue: "\"address\""
 - uid: Outlook_1_1.Office.MailboxEnums.EntityType.Contact
-  summary: <span data-ttu-id="63359-106">指定实体为联系人。</span><span class="sxs-lookup"><span data-stu-id="63359-106">Specifies that the entity is a contact.</span></span>
+  summary: <span data-ttu-id="cd9c9-106">指定实体为联系人。</span><span class="sxs-lookup"><span data-stu-id="cd9c9-106">Specifies that the entity is a contact.</span></span>
   name: Contact
   fullName: Contact
   langs:
@@ -44,7 +44,7 @@ items:
   type: field
   numericValue: "\"contact\""
 - uid: Outlook_1_1.Office.MailboxEnums.EntityType.EmailAddress
-  summary: <span data-ttu-id="63359-107">指定实体为 SMTP 电子邮件地址。</span><span class="sxs-lookup"><span data-stu-id="63359-107">Specifies that the entity is an SMTP email address.</span></span>
+  summary: <span data-ttu-id="cd9c9-107">指定实体为 SMTP 电子邮件地址。</span><span class="sxs-lookup"><span data-stu-id="cd9c9-107">Specifies that the entity is an SMTP email address.</span></span>
   name: EmailAddress
   fullName: EmailAddress
   langs:
@@ -52,7 +52,7 @@ items:
   type: field
   numericValue: "\"emailAddress\""
 - uid: Outlook_1_1.Office.MailboxEnums.EntityType.MeetingSuggestion
-  summary: <span data-ttu-id="63359-108">指定实体为会议建议。</span><span class="sxs-lookup"><span data-stu-id="63359-108">Specifies that the entity is a meeting suggestion.</span></span>
+  summary: <span data-ttu-id="cd9c9-108">指定实体为会议建议。</span><span class="sxs-lookup"><span data-stu-id="cd9c9-108">Specifies that the entity is a meeting suggestion.</span></span>
   name: MeetingSuggestion
   fullName: MeetingSuggestion
   langs:
@@ -60,7 +60,7 @@ items:
   type: field
   numericValue: "\"meetingSuggestion\""
 - uid: Outlook_1_1.Office.MailboxEnums.EntityType.PhoneNumber
-  summary: <span data-ttu-id="63359-109">指定实体为美国电话号码。</span><span class="sxs-lookup"><span data-stu-id="63359-109">Specifies that the entity is a US phone number.</span></span>
+  summary: <span data-ttu-id="cd9c9-109">指定实体为美国电话号码。</span><span class="sxs-lookup"><span data-stu-id="cd9c9-109">Specifies that the entity is a US phone number.</span></span>
   name: PhoneNumber
   fullName: PhoneNumber
   langs:
@@ -68,7 +68,7 @@ items:
   type: field
   numericValue: "\"phoneNumber\""
 - uid: Outlook_1_1.Office.MailboxEnums.EntityType.TaskSuggestion
-  summary: <span data-ttu-id="63359-110">指定实体为任务建议。</span><span class="sxs-lookup"><span data-stu-id="63359-110">Specifies that the entity is a task suggestion.</span></span>
+  summary: <span data-ttu-id="cd9c9-110">指定实体为任务建议。</span><span class="sxs-lookup"><span data-stu-id="cd9c9-110">Specifies that the entity is a task suggestion.</span></span>
   name: TaskSuggestion
   fullName: TaskSuggestion
   langs:
@@ -76,7 +76,7 @@ items:
   type: field
   numericValue: "\"taskSuggestion\""
 - uid: Outlook_1_1.Office.MailboxEnums.EntityType.Url
-  summary: <span data-ttu-id="63359-111">指定实体为 Internet URL。</span><span class="sxs-lookup"><span data-stu-id="63359-111">Specifies that the entity is an Internet URL.</span></span>
+  summary: <span data-ttu-id="cd9c9-111">指定实体为 Internet URL。</span><span class="sxs-lookup"><span data-stu-id="cd9c9-111">Specifies that the entity is an Internet URL.</span></span>
   name: Url
   fullName: Url
   langs:
