--- a/docs/docs-ref-autogen/outlook_1_2/office.mailboxenums.attachmenttype.yml
+++ b/docs/docs-ref-autogen/outlook_1_2/office.mailboxenums.attachmenttype.yml
@@ -1,18 +1,18 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: b9f7c97ee6fcc14cfd154b27ae2f5d5615decad5
-ms.sourcegitcommit: 016e17422cf62dc9f1de1809666e9244e41cc1a9
+ms.openlocfilehash: 14b08eedc896ffa5e3fb4c06ec95da1e3e66306c
+ms.sourcegitcommit: b05ee546d9dfbc914c8d1c594d9b206b04780bbc
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 11/09/2018
-ms.locfileid: "26232985"
+ms.lasthandoff: 11/22/2018
+ms.locfileid: "26646851"
 items:
 - uid: Outlook_1_2.Office.MailboxEnums.AttachmentType
   summary: >-
-    <span data-ttu-id="af0f7-101">指定附件的类型。</span><span class="sxs-lookup"><span data-stu-id="af0f7-101">Specifies an attachment's type.</span></span>
+    <span data-ttu-id="f8c98-101">指定附件的类型。</span><span class="sxs-lookup"><span data-stu-id="f8c98-101">Specifies an attachment's type.</span></span>
 
 
-    <span data-ttu-id="af0f7-102">\[[API 集： 邮箱 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="af0f7-102">\[ [API set: Mailbox 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets) \]</span></span>
-  remarks: <table><tr><td> <span data-ttu-id="af0f7-103">[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points) </span><span class="sxs-lookup"><span data-stu-id="af0f7-103">[ Applicable Outlook mode](https://docs.microsoft.com/outlook/add-ins/#extension-points) </span></span></td><td><span data-ttu-id="af0f7-104">撰写或阅读</span><span class="sxs-lookup"><span data-stu-id="af0f7-104">Compose or read</span></span></td></tr></table>
+    <span data-ttu-id="f8c98-102">\[[API 集： 邮箱 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="f8c98-102">\[ [API set: Mailbox 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets) \]</span></span>
+  remarks: <table><tr><td> <span data-ttu-id="f8c98-103">[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points) </span><span class="sxs-lookup"><span data-stu-id="f8c98-103">[Applicable Outlook mode](https://docs.microsoft.com/outlook/add-ins/#extension-points) </span></span></td><td><span data-ttu-id="f8c98-104">撰写或阅读</span><span class="sxs-lookup"><span data-stu-id="f8c98-104">Compose or read</span></span></td></tr></table>
   name: Office.MailboxEnums.AttachmentType
   fullName: Office.MailboxEnums.AttachmentType
   langs:
@@ -24,7 +24,7 @@ items:
   - Outlook_1_2.Office.MailboxEnums.AttachmentType.File
   - Outlook_1_2.Office.MailboxEnums.AttachmentType.Item
 - uid: Outlook_1_2.Office.MailboxEnums.AttachmentType.Cloud
-  summary: <span data-ttu-id="af0f7-105">附件存储在云位置，如 OneDrive。</span><span class="sxs-lookup"><span data-stu-id="af0f7-105">The attachment is stored in a cloud location, such as OneDrive.</span></span> <span data-ttu-id="af0f7-106">附件的 id 属性包含的文件的 URL。</span><span class="sxs-lookup"><span data-stu-id="af0f7-106">The id property of the attachment contains a URL to the file.</span></span>
+  summary: <span data-ttu-id="f8c98-105">附件存储在云位置，如 OneDrive。</span><span class="sxs-lookup"><span data-stu-id="f8c98-105">The attachment is stored in a cloud location, such as OneDrive.</span></span> <span data-ttu-id="f8c98-106">附件的 id 属性包含的文件的 URL。</span><span class="sxs-lookup"><span data-stu-id="f8c98-106">The id property of the attachment contains a URL to the file.</span></span>
   name: Cloud
   fullName: Cloud
   langs:
@@ -32,7 +32,7 @@ items:
   type: field
   numericValue: "\"cloud\""
 - uid: Outlook_1_2.Office.MailboxEnums.AttachmentType.File
-  summary: <span data-ttu-id="af0f7-107">附件是一个文件</span><span class="sxs-lookup"><span data-stu-id="af0f7-107">The attachment is a file</span></span>
+  summary: <span data-ttu-id="f8c98-107">附件是一个文件</span><span class="sxs-lookup"><span data-stu-id="f8c98-107">The attachment is a file</span></span>
   name: File
   fullName: File
   langs:
@@ -40,7 +40,7 @@ items:
   type: field
   numericValue: "\"file\""
 - uid: Outlook_1_2.Office.MailboxEnums.AttachmentType.Item
-  summary: <span data-ttu-id="af0f7-108">附件是 Exchange 项</span><span class="sxs-lookup"><span data-stu-id="af0f7-108">The attachment is an Exchange item</span></span>
+  summary: <span data-ttu-id="f8c98-108">附件是 Exchange 项</span><span class="sxs-lookup"><span data-stu-id="f8c98-108">The attachment is an Exchange item</span></span>
   name: Item
   fullName: Item
   langs:
