--- a/docs/docs-ref-autogen/outlook_1_2/office.message.yml
+++ b/docs/docs-ref-autogen/outlook_1_2/office.message.yml
@@ -1,17 +1,17 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 2fb24a2ac580f07dec1a280b46626109f7a68ab8
-ms.sourcegitcommit: 016e17422cf62dc9f1de1809666e9244e41cc1a9
+ms.openlocfilehash: afaffac1fdd54778879312a1a929ef4b1ec069aa
+ms.sourcegitcommit: b05ee546d9dfbc914c8d1c594d9b206b04780bbc
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 11/09/2018
-ms.locfileid: "26229044"
+ms.lasthandoff: 11/22/2018
+ms.locfileid: "26647047"
 items:
 - uid: Outlook_1_2.Office.Message
   summary: >-
-    <span data-ttu-id="44901-101">邮件[Office.Item](xref:Outlook_1_2.Office.Item)一个子类。</span><span class="sxs-lookup"><span data-stu-id="44901-101">A subclass of [Office.Item](xref:Outlook_1_2.Office.Item) for messages.</span></span>
+    <span data-ttu-id="45c95-101">邮件[Office.Item](xref:Outlook_1_2.Office.Item)一个子类。</span><span class="sxs-lookup"><span data-stu-id="45c95-101">A subclass of [Office.Item](xref:Outlook_1_2.Office.Item) for messages.</span></span>
 
 
-    <span data-ttu-id="44901-102">重要说明： 这是一个内部的 Outlook 对象，不能直接通过现有接口公开。</span><span class="sxs-lookup"><span data-stu-id="44901-102">Important: This is an internal Outlook object, not directly exposed through existing interfaces.</span></span> <span data-ttu-id="44901-103">应将此视为模式`Office.context.mailbox.item` <!-- -->。</span><span class="sxs-lookup"><span data-stu-id="44901-103">You should treat this as a mode of `Office.context.mailbox.item`<!-- -->.</span></span> <span data-ttu-id="44901-104">引用的对象模型的详细信息页。</span><span class="sxs-lookup"><span data-stu-id="44901-104">Refer to the Object Model pages for more information.</span></span>
+    <span data-ttu-id="45c95-102">重要说明： 这是一个内部的 Outlook 对象，不能直接通过现有接口公开。</span><span class="sxs-lookup"><span data-stu-id="45c95-102">Important: This is an internal Outlook object, not directly exposed through existing interfaces.</span></span> <span data-ttu-id="45c95-103">应将此视为模式`Office.context.mailbox.item` <!-- -->。</span><span class="sxs-lookup"><span data-stu-id="45c95-103">You should treat this as a mode of `Office.context.mailbox.item`<!-- -->.</span></span> <span data-ttu-id="45c95-104">引用的对象模型的详细信息页。</span><span class="sxs-lookup"><span data-stu-id="45c95-104">Refer to the Object Model pages for more information.</span></span>
   name: Office.Message
   fullName: Office.Message
   langs:
@@ -24,21 +24,21 @@ items:
   - Outlook_1_2.Office.Message.conversationId
 - uid: Outlook_1_2.Office.Message.conversationId
   summary: >-
-    <span data-ttu-id="44901-105">获取包含特定消息的电子邮件会话的标识符。</span><span class="sxs-lookup"><span data-stu-id="44901-105">Gets an identifier for the email conversation that contains a particular message.</span></span>
+    <span data-ttu-id="45c95-105">获取包含特定消息的电子邮件会话的标识符。</span><span class="sxs-lookup"><span data-stu-id="45c95-105">Gets an identifier for the email conversation that contains a particular message.</span></span>
 
 
-    <span data-ttu-id="44901-p102">如果在阅读窗体或撰写窗体的回复中激活邮件应用程序，则此属性可以获得一个整数值。如果用户随后更改了回复邮件的主题（若发送回复），则该邮件的对话 ID 将改变且之前获取的值将不适用。</span><span class="sxs-lookup"><span data-stu-id="44901-p102">You can get an integer for this property if your mail app is activated in read forms or responses in compose forms. If subsequently the user changes the subject of the reply message, upon sending the reply, the conversation ID for that message will change and that value you obtained earlier will no longer apply.</span></span>
+    <span data-ttu-id="45c95-p102">如果在阅读窗体或撰写窗体的回复中激活邮件应用程序，则此属性可以获得一个整数值。如果用户随后更改了回复邮件的主题（若发送回复），则该邮件的对话 ID 将改变且之前获取的值将不适用。</span><span class="sxs-lookup"><span data-stu-id="45c95-p102">You can get an integer for this property if your mail app is activated in read forms or responses in compose forms. If subsequently the user changes the subject of the reply message, upon sending the reply, the conversation ID for that message will change and that value you obtained earlier will no longer apply.</span></span>
 
 
-    <span data-ttu-id="44901-p103">对于撰写窗体的新项目，此属性获得一个 null 值。如果用户设置一个主题并保存该项目，conversationId 属性将返回一个值。</span><span class="sxs-lookup"><span data-stu-id="44901-p103">You get null for this property for a new item in a compose form. If the user sets a subject and saves the item, the conversationId property will return a value.</span></span>
+    <span data-ttu-id="45c95-p103">对于撰写窗体的新项目，此属性获得一个 null 值。如果用户设置一个主题并保存该项目，conversationId 属性将返回一个值。</span><span class="sxs-lookup"><span data-stu-id="45c95-p103">You get null for this property for a new item in a compose form. If the user sets a subject and saves the item, the conversationId property will return a value.</span></span>
 
 
-    <span data-ttu-id="44901-110">\[[API 集： 邮箱 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="44901-110">\[ [API set: Mailbox 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="45c95-110">\[[API 集： 邮箱 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="45c95-110">\[ [API set: Mailbox 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets) \]</span></span>
   remarks: >-
-    <table><tr><td>[<span data-ttu-id="44901-111">最低权限级别</span><span class="sxs-lookup"><span data-stu-id="44901-111"> Minimum permission level</span></span>](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td><span data-ttu-id="44901-112">ReadItem</span><span class="sxs-lookup"><span data-stu-id="44901-112">ReadItem</span></span></td></tr>
+    <table><tr><td>[<span data-ttu-id="45c95-111">最低权限级别</span><span class="sxs-lookup"><span data-stu-id="45c95-111">Minimum permission level</span></span>](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td><span data-ttu-id="45c95-112">ReadItem</span><span class="sxs-lookup"><span data-stu-id="45c95-112">ReadItem</span></span></td></tr>
 
 
-    <tr><td>[<span data-ttu-id="44901-113">适用的 Outlook 模式</span><span class="sxs-lookup"><span data-stu-id="44901-113"> Applicable Outlook mode</span></span>](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td><span data-ttu-id="44901-114">撰写或阅读</span><span class="sxs-lookup"><span data-stu-id="44901-114">Compose or read</span></span></td></tr></table>
+    <tr><td>[<span data-ttu-id="45c95-113">适用的 Outlook 模式</span><span class="sxs-lookup"><span data-stu-id="45c95-113">Applicable Outlook mode</span></span>](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td><span data-ttu-id="45c95-114">撰写或阅读</span><span class="sxs-lookup"><span data-stu-id="45c95-114">Compose or read</span></span></td></tr></table>
   name: conversationId
   fullName: conversationId
   langs:
