--- a/docs/docs-ref-autogen/outlook_1_2/office.userprofile.yml
+++ b/docs/docs-ref-autogen/outlook_1_2/office.userprofile.yml
@@ -1,22 +1,22 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: ff4a801a2af00719edf22154d6932f45388bfdae
-ms.sourcegitcommit: 016e17422cf62dc9f1de1809666e9244e41cc1a9
+ms.openlocfilehash: 663a8441cd22f20785aecd349f28d5f9c3e57806
+ms.sourcegitcommit: b05ee546d9dfbc914c8d1c594d9b206b04780bbc
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 11/09/2018
-ms.locfileid: "26230493"
+ms.lasthandoff: 11/22/2018
+ms.locfileid: "26645297"
 items:
 - uid: Outlook_1_2.Office.UserProfile
   summary: >-
-    <span data-ttu-id="5e21f-101">有关与邮箱关联的用户的信息。</span><span class="sxs-lookup"><span data-stu-id="5e21f-101">Information about the user associated with the mailbox.</span></span> <span data-ttu-id="5e21f-102">这包括其帐户类型、 显示名称、 电子邮件地址和所在的时区。</span><span class="sxs-lookup"><span data-stu-id="5e21f-102">This includes their account type, display name, email address, and time zone.</span></span>
+    <span data-ttu-id="215dd-101">有关与邮箱关联的用户的信息。</span><span class="sxs-lookup"><span data-stu-id="215dd-101">Information about the user associated with the mailbox.</span></span> <span data-ttu-id="215dd-102">这包括其帐户类型、 显示名称、 电子邮件地址和所在的时区。</span><span class="sxs-lookup"><span data-stu-id="215dd-102">This includes their account type, display name, email address, and time zone.</span></span>
 
 
-    <span data-ttu-id="5e21f-103">\[[API 集： 邮箱 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="5e21f-103">\[ [API set: Mailbox 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="215dd-103">\[[API 集： 邮箱 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="215dd-103">\[ [API set: Mailbox 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets) \]</span></span>
   remarks: >-
-    <table><tr><td>[<span data-ttu-id="5e21f-104">最低权限级别</span><span class="sxs-lookup"><span data-stu-id="5e21f-104"> Minimum permission level</span></span>](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td><span data-ttu-id="5e21f-105">ReadItem</span><span class="sxs-lookup"><span data-stu-id="5e21f-105">ReadItem</span></span></td></tr>
+    <table><tr><td>[<span data-ttu-id="215dd-104">最低权限级别</span><span class="sxs-lookup"><span data-stu-id="215dd-104">Minimum permission level</span></span>](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td><span data-ttu-id="215dd-105">ReadItem</span><span class="sxs-lookup"><span data-stu-id="215dd-105">ReadItem</span></span></td></tr>
 
 
-    <tr><td>[<span data-ttu-id="5e21f-106">适用的 Outlook 模式</span><span class="sxs-lookup"><span data-stu-id="5e21f-106"> Applicable Outlook mode</span></span>](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td><span data-ttu-id="5e21f-107">撰写或阅读</span><span class="sxs-lookup"><span data-stu-id="5e21f-107">Compose or read</span></span></td></tr></table>
+    <tr><td>[<span data-ttu-id="215dd-106">适用的 Outlook 模式</span><span class="sxs-lookup"><span data-stu-id="215dd-106">Applicable Outlook mode</span></span>](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td><span data-ttu-id="215dd-107">撰写或阅读</span><span class="sxs-lookup"><span data-stu-id="215dd-107">Compose or read</span></span></td></tr></table>
   name: Office.UserProfile
   fullName: Office.UserProfile
   langs:
@@ -29,15 +29,15 @@ items:
   - Outlook_1_2.Office.UserProfile.timeZone
 - uid: Outlook_1_2.Office.UserProfile.displayName
   summary: >-
-    <span data-ttu-id="5e21f-108">获取用户的显示名称。</span><span class="sxs-lookup"><span data-stu-id="5e21f-108">Gets the user's display name.</span></span>
+    <span data-ttu-id="215dd-108">获取用户的显示名称。</span><span class="sxs-lookup"><span data-stu-id="215dd-108">Gets the user's display name.</span></span>
 
 
-    <span data-ttu-id="5e21f-109">\[[API 集： 邮箱 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="5e21f-109">\[ [API set: Mailbox 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="215dd-109">\[[API 集： 邮箱 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="215dd-109">\[ [API set: Mailbox 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets) \]</span></span>
   remarks: >-
-    <table><tr><td>[<span data-ttu-id="5e21f-110">最低权限级别</span><span class="sxs-lookup"><span data-stu-id="5e21f-110"> Minimum permission level</span></span>](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td><span data-ttu-id="5e21f-111">ReadItem</span><span class="sxs-lookup"><span data-stu-id="5e21f-111">ReadItem</span></span></td></tr>
+    <table><tr><td>[<span data-ttu-id="215dd-110">最低权限级别</span><span class="sxs-lookup"><span data-stu-id="215dd-110">Minimum permission level</span></span>](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td><span data-ttu-id="215dd-111">ReadItem</span><span class="sxs-lookup"><span data-stu-id="215dd-111">ReadItem</span></span></td></tr>
 
 
-    <tr><td>[<span data-ttu-id="5e21f-112">适用的 Outlook 模式</span><span class="sxs-lookup"><span data-stu-id="5e21f-112"> Applicable Outlook mode</span></span>](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td><span data-ttu-id="5e21f-113">撰写或阅读</span><span class="sxs-lookup"><span data-stu-id="5e21f-113">Compose or read</span></span></td></tr></table>
+    <tr><td>[<span data-ttu-id="215dd-112">适用的 Outlook 模式</span><span class="sxs-lookup"><span data-stu-id="215dd-112">Applicable Outlook mode</span></span>](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td><span data-ttu-id="215dd-113">撰写或阅读</span><span class="sxs-lookup"><span data-stu-id="215dd-113">Compose or read</span></span></td></tr></table>
   name: displayName
   fullName: displayName
   langs:
@@ -50,15 +50,15 @@ items:
       - string
 - uid: Outlook_1_2.Office.UserProfile.emailAddress
   summary: >-
-    <span data-ttu-id="5e21f-114">获取用户的显示名称。</span><span class="sxs-lookup"><span data-stu-id="5e21f-114">Gets the user's display name.</span></span>
+    <span data-ttu-id="215dd-114">获取用户的显示名称。</span><span class="sxs-lookup"><span data-stu-id="215dd-114">Gets the user's display name.</span></span>
 
 
-    <span data-ttu-id="5e21f-115">\[[API 集： 邮箱 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="5e21f-115">\[ [API set: Mailbox 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="215dd-115">\[[API 集： 邮箱 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="215dd-115">\[ [API set: Mailbox 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets) \]</span></span>
   remarks: >-
-    <table><tr><td>[<span data-ttu-id="5e21f-116">最低权限级别</span><span class="sxs-lookup"><span data-stu-id="5e21f-116"> Minimum permission level</span></span>](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td><span data-ttu-id="5e21f-117">ReadItem</span><span class="sxs-lookup"><span data-stu-id="5e21f-117">ReadItem</span></span></td></tr>
+    <table><tr><td>[<span data-ttu-id="215dd-116">最低权限级别</span><span class="sxs-lookup"><span data-stu-id="215dd-116">Minimum permission level</span></span>](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td><span data-ttu-id="215dd-117">ReadItem</span><span class="sxs-lookup"><span data-stu-id="215dd-117">ReadItem</span></span></td></tr>
 
 
-    <tr><td>[<span data-ttu-id="5e21f-118">适用的 Outlook 模式</span><span class="sxs-lookup"><span data-stu-id="5e21f-118"> Applicable Outlook mode</span></span>](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td><span data-ttu-id="5e21f-119">撰写或阅读</span><span class="sxs-lookup"><span data-stu-id="5e21f-119">Compose or read</span></span></td></tr></table>
+    <tr><td>[<span data-ttu-id="215dd-118">适用的 Outlook 模式</span><span class="sxs-lookup"><span data-stu-id="215dd-118">Applicable Outlook mode</span></span>](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td><span data-ttu-id="215dd-119">撰写或阅读</span><span class="sxs-lookup"><span data-stu-id="215dd-119">Compose or read</span></span></td></tr></table>
   name: emailAddress
   fullName: emailAddress
   langs:
@@ -71,15 +71,15 @@ items:
       - string
 - uid: Outlook_1_2.Office.UserProfile.timeZone
   summary: >-
-    <span data-ttu-id="5e21f-120">获取用户的 SMTP 电子邮件地址。</span><span class="sxs-lookup"><span data-stu-id="5e21f-120">Gets the user's SMTP email address.</span></span>
+    <span data-ttu-id="215dd-120">获取用户的 SMTP 电子邮件地址。</span><span class="sxs-lookup"><span data-stu-id="215dd-120">Gets the user's SMTP email address.</span></span>
 
 
-    <span data-ttu-id="5e21f-121">\[[API 集： 邮箱 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="5e21f-121">\[ [API set: Mailbox 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="215dd-121">\[[API 集： 邮箱 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="215dd-121">\[ [API set: Mailbox 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets) \]</span></span>
   remarks: >-
-    <table><tr><td>[<span data-ttu-id="5e21f-122">最低权限级别</span><span class="sxs-lookup"><span data-stu-id="5e21f-122"> Minimum permission level</span></span>](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td><span data-ttu-id="5e21f-123">ReadItem</span><span class="sxs-lookup"><span data-stu-id="5e21f-123">ReadItem</span></span></td></tr>
+    <table><tr><td>[<span data-ttu-id="215dd-122">最低权限级别</span><span class="sxs-lookup"><span data-stu-id="215dd-122">Minimum permission level</span></span>](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td><span data-ttu-id="215dd-123">ReadItem</span><span class="sxs-lookup"><span data-stu-id="215dd-123">ReadItem</span></span></td></tr>
 
 
-    <tr><td>[<span data-ttu-id="5e21f-124">适用的 Outlook 模式</span><span class="sxs-lookup"><span data-stu-id="5e21f-124"> Applicable Outlook mode</span></span>](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td><span data-ttu-id="5e21f-125">撰写或阅读</span><span class="sxs-lookup"><span data-stu-id="5e21f-125">Compose or read</span></span></td></tr></table>
+    <tr><td>[<span data-ttu-id="215dd-124">适用的 Outlook 模式</span><span class="sxs-lookup"><span data-stu-id="215dd-124">Applicable Outlook mode</span></span>](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td><span data-ttu-id="215dd-125">撰写或阅读</span><span class="sxs-lookup"><span data-stu-id="215dd-125">Compose or read</span></span></td></tr></table>
   name: timeZone
   fullName: timeZone
   langs:
