--- a/docs/docs-ref-autogen/outlook_1_4/office.emailuser.yml
+++ b/docs/docs-ref-autogen/outlook_1_4/office.emailuser.yml
@@ -1,22 +1,22 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 8d2cace97e788c77e9555d0bd845ada2ec27ed2b
-ms.sourcegitcommit: 016e17422cf62dc9f1de1809666e9244e41cc1a9
+ms.openlocfilehash: d8a13dfdd7669309af4a54b9e6389ab5bcbdfd40
+ms.sourcegitcommit: b05ee546d9dfbc914c8d1c594d9b206b04780bbc
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 11/09/2018
-ms.locfileid: "26229741"
+ms.lasthandoff: 11/22/2018
+ms.locfileid: "26645836"
 items:
 - uid: Outlook_1_4.Office.EmailUser
   summary: >-
-    <span data-ttu-id="8310e-101">表示 Exchange Server 上的电子邮件帐户。</span><span class="sxs-lookup"><span data-stu-id="8310e-101">Represents an email account on an Exchange Server.</span></span>
+    <span data-ttu-id="e86fc-101">表示 Exchange Server 上的电子邮件帐户。</span><span class="sxs-lookup"><span data-stu-id="e86fc-101">Represents an email account on an Exchange Server.</span></span>
 
 
-    <span data-ttu-id="8310e-102">\[[API 集： 邮箱 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="8310e-102">\[ [API set: Mailbox 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="e86fc-102">\[[API 集： 邮箱 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e86fc-102">\[ [API set: Mailbox 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets) \]</span></span>
   remarks: >-
-    <table><tr><td>[<span data-ttu-id="8310e-103">最低权限级别</span><span class="sxs-lookup"><span data-stu-id="8310e-103"> Minimum permission level</span></span>](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td><span data-ttu-id="8310e-104">ReadItem</span><span class="sxs-lookup"><span data-stu-id="8310e-104">ReadItem</span></span></td></tr>
+    <table><tr><td>[<span data-ttu-id="e86fc-103">最低权限级别</span><span class="sxs-lookup"><span data-stu-id="e86fc-103">Minimum permission level</span></span>](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td><span data-ttu-id="e86fc-104">ReadItem</span><span class="sxs-lookup"><span data-stu-id="e86fc-104">ReadItem</span></span></td></tr>
 
 
-    <tr><td>[<span data-ttu-id="8310e-105">适用的 Outlook 模式</span><span class="sxs-lookup"><span data-stu-id="8310e-105"> Applicable Outlook mode</span></span>](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td><span data-ttu-id="8310e-106">Read</span><span class="sxs-lookup"><span data-stu-id="8310e-106">Read</span></span></td></tr></table>
+    <tr><td>[<span data-ttu-id="e86fc-105">适用的 Outlook 模式</span><span class="sxs-lookup"><span data-stu-id="e86fc-105">Applicable Outlook mode</span></span>](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td><span data-ttu-id="e86fc-106">阅读</span><span class="sxs-lookup"><span data-stu-id="e86fc-106">Read</span></span></td></tr></table>
   name: Office.EmailUser
   fullName: Office.EmailUser
   langs:
@@ -27,7 +27,7 @@ items:
   - Outlook_1_4.Office.EmailUser.displayName
   - Outlook_1_4.Office.EmailUser.emailAddress
 - uid: Outlook_1_4.Office.EmailUser.displayName
-  summary: <span data-ttu-id="8310e-107">获取与电子邮件地址关联的显示名称。</span><span class="sxs-lookup"><span data-stu-id="8310e-107">Gets the display name associated with an email address.</span></span>
+  summary: <span data-ttu-id="e86fc-107">获取与电子邮件地址关联的显示名称。</span><span class="sxs-lookup"><span data-stu-id="e86fc-107">Gets the display name associated with an email address.</span></span>
   name: displayName
   fullName: displayName
   langs:
@@ -39,7 +39,7 @@ items:
       type:
       - string
 - uid: Outlook_1_4.Office.EmailUser.emailAddress
-  summary: <span data-ttu-id="8310e-108">获取 SMTP 电子邮件地址。</span><span class="sxs-lookup"><span data-stu-id="8310e-108">Gets the SMTP email address.</span></span>
+  summary: <span data-ttu-id="e86fc-108">获取 SMTP 电子邮件地址。</span><span class="sxs-lookup"><span data-stu-id="e86fc-108">Gets the SMTP email address.</span></span>
   name: emailAddress
   fullName: emailAddress
   langs:
