--- a/docs/docs-ref-autogen/outlook_1_6/office.tasksuggestion.yml
+++ b/docs/docs-ref-autogen/outlook_1_6/office.tasksuggestion.yml
@@ -1,25 +1,25 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 783703d62aff3f544bb7253aee57e2ed47fcf365
-ms.sourcegitcommit: 016e17422cf62dc9f1de1809666e9244e41cc1a9
+ms.openlocfilehash: d1406022f086b09e8519f1868abb6e8038188b74
+ms.sourcegitcommit: b05ee546d9dfbc914c8d1c594d9b206b04780bbc
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 11/09/2018
-ms.locfileid: "26234413"
+ms.lasthandoff: 11/22/2018
+ms.locfileid: "26649182"
 items:
 - uid: Outlook_1_6.Office.TaskSuggestion
   summary: >-
-    <span data-ttu-id="5432c-p101">表示项目中标识的建议任务。仅限阅读模式。</span><span class="sxs-lookup"><span data-stu-id="5432c-p101">Represents a suggested task identified in an item. Read mode only.</span></span>
+    <span data-ttu-id="3196b-p101">表示项目中标识的建议任务。仅限阅读模式。</span><span class="sxs-lookup"><span data-stu-id="3196b-p101">Represents a suggested task identified in an item. Read mode only.</span></span>
 
 
-    <span data-ttu-id="5432c-103">当对活动项目调用 getEntities 或 getEntitiesByType 方法时返回的[Entities](xref:Outlook_1_6.Office.Entities)对象的 taskSuggestions 属性返回的电子邮件中建议的任务列表。</span><span class="sxs-lookup"><span data-stu-id="5432c-103">The list of tasks suggested in an email message is returned in the taskSuggestions property of the [ Entities](xref:Outlook_1_6.Office.Entities) object that is returned when the getEntities or getEntitiesByType method is called on the active item.</span></span>
+    <span data-ttu-id="3196b-103">当对活动项目调用 getEntities 或 getEntitiesByType 方法时返回的[Entities](xref:Outlook_1_6.Office.Entities)对象的 taskSuggestions 属性返回的电子邮件中建议的任务列表。</span><span class="sxs-lookup"><span data-stu-id="3196b-103">The list of tasks suggested in an email message is returned in the taskSuggestions property of the [Entities](xref:Outlook_1_6.Office.Entities) object that is returned when the getEntities or getEntitiesByType method is called on the active item.</span></span>
 
 
-    <span data-ttu-id="5432c-104">\[[API 集： 邮箱 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="5432c-104">\[ [API set: Mailbox 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="3196b-104">\[[API 集： 邮箱 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="3196b-104">\[ [API set: Mailbox 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets) \]</span></span>
   remarks: >-
-    <table><tr><td>[<span data-ttu-id="5432c-105">最低权限级别</span><span class="sxs-lookup"><span data-stu-id="5432c-105"> Minimum permission level</span></span>](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td><span data-ttu-id="5432c-106">ReadItem</span><span class="sxs-lookup"><span data-stu-id="5432c-106">ReadItem</span></span></td></tr>
+    <table><tr><td>[<span data-ttu-id="3196b-105">最低权限级别</span><span class="sxs-lookup"><span data-stu-id="3196b-105">Minimum permission level</span></span>](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td><span data-ttu-id="3196b-106">ReadItem</span><span class="sxs-lookup"><span data-stu-id="3196b-106">ReadItem</span></span></td></tr>
 
 
-    <tr><td>[<span data-ttu-id="5432c-107">适用的 Outlook 模式</span><span class="sxs-lookup"><span data-stu-id="5432c-107"> Applicable Outlook mode</span></span>](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td><span data-ttu-id="5432c-108">Read</span><span class="sxs-lookup"><span data-stu-id="5432c-108">Read</span></span></td></tr></table>
+    <tr><td>[<span data-ttu-id="3196b-107">适用的 Outlook 模式</span><span class="sxs-lookup"><span data-stu-id="3196b-107">Applicable Outlook mode</span></span>](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td><span data-ttu-id="3196b-108">阅读</span><span class="sxs-lookup"><span data-stu-id="3196b-108">Read</span></span></td></tr></table>
   name: Office.TaskSuggestion
   fullName: Office.TaskSuggestion
   langs:
@@ -30,7 +30,7 @@ items:
   - Outlook_1_6.Office.TaskSuggestion.assignees
   - Outlook_1_6.Office.TaskSuggestion.taskString
 - uid: Outlook_1_6.Office.TaskSuggestion.assignees
-  summary: <span data-ttu-id="5432c-109">获取应向其分配建议任务的用户。</span><span class="sxs-lookup"><span data-stu-id="5432c-109">Gets the users that should be assigned a suggested task.</span></span>
+  summary: <span data-ttu-id="3196b-109">获取应向其分配建议任务的用户。</span><span class="sxs-lookup"><span data-stu-id="3196b-109">Gets the users that should be assigned a suggested task.</span></span>
   name: assignees
   fullName: assignees
   langs:
@@ -42,7 +42,7 @@ items:
       type:
       - EmailUser[]
 - uid: Outlook_1_6.Office.TaskSuggestion.taskString
-  summary: <span data-ttu-id="5432c-110">获取标识为任务建议的项的文本。</span><span class="sxs-lookup"><span data-stu-id="5432c-110">Gets the text of an item that was identified as a task suggestion.</span></span>
+  summary: <span data-ttu-id="3196b-110">获取标识为任务建议的项的文本。</span><span class="sxs-lookup"><span data-stu-id="3196b-110">Gets the text of an item that was identified as a task suggestion.</span></span>
   name: taskString
   fullName: taskString
   langs:
