--- a/docs/docs-ref-autogen/outlook_1_7/office.emailuser.yml
+++ b/docs/docs-ref-autogen/outlook_1_7/office.emailuser.yml
@@ -1,22 +1,22 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 28cfaf7771aa4ee58ded98b7c945e5f98694d45b
-ms.sourcegitcommit: 016e17422cf62dc9f1de1809666e9244e41cc1a9
+ms.openlocfilehash: d4652da19babd488de30681fabd6490cabef7b83
+ms.sourcegitcommit: b05ee546d9dfbc914c8d1c594d9b206b04780bbc
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 11/09/2018
-ms.locfileid: "26235736"
+ms.lasthandoff: 11/22/2018
+ms.locfileid: "26646732"
 items:
 - uid: Outlook_1_7.Office.EmailUser
   summary: >-
-    <span data-ttu-id="f0b52-101">表示 Exchange Server 上的电子邮件帐户。</span><span class="sxs-lookup"><span data-stu-id="f0b52-101">Represents an email account on an Exchange Server.</span></span>
+    <span data-ttu-id="174f8-101">表示 Exchange Server 上的电子邮件帐户。</span><span class="sxs-lookup"><span data-stu-id="174f8-101">Represents an email account on an Exchange Server.</span></span>
 
 
-    <span data-ttu-id="f0b52-102">\[[API 集： 邮箱 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="f0b52-102">\[ [API set: Mailbox 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="174f8-102">\[[API 集： 邮箱 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="174f8-102">\[ [API set: Mailbox 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets) \]</span></span>
   remarks: >-
-    <table><tr><td>[<span data-ttu-id="f0b52-103">最低权限级别</span><span class="sxs-lookup"><span data-stu-id="f0b52-103"> Minimum permission level</span></span>](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td><span data-ttu-id="f0b52-104">ReadItem</span><span class="sxs-lookup"><span data-stu-id="f0b52-104">ReadItem</span></span></td></tr>
+    <table><tr><td>[<span data-ttu-id="174f8-103">最低权限级别</span><span class="sxs-lookup"><span data-stu-id="174f8-103">Minimum permission level</span></span>](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td><span data-ttu-id="174f8-104">ReadItem</span><span class="sxs-lookup"><span data-stu-id="174f8-104">ReadItem</span></span></td></tr>
 
 
-    <tr><td>[<span data-ttu-id="f0b52-105">适用的 Outlook 模式</span><span class="sxs-lookup"><span data-stu-id="f0b52-105"> Applicable Outlook mode</span></span>](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td><span data-ttu-id="f0b52-106">Read</span><span class="sxs-lookup"><span data-stu-id="f0b52-106">Read</span></span></td></tr></table>
+    <tr><td>[<span data-ttu-id="174f8-105">适用的 Outlook 模式</span><span class="sxs-lookup"><span data-stu-id="174f8-105">Applicable Outlook mode</span></span>](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td><span data-ttu-id="174f8-106">阅读</span><span class="sxs-lookup"><span data-stu-id="174f8-106">Read</span></span></td></tr></table>
   name: Office.EmailUser
   fullName: Office.EmailUser
   langs:
@@ -27,7 +27,7 @@ items:
   - Outlook_1_7.Office.EmailUser.displayName
   - Outlook_1_7.Office.EmailUser.emailAddress
 - uid: Outlook_1_7.Office.EmailUser.displayName
-  summary: <span data-ttu-id="f0b52-107">获取与电子邮件地址关联的显示名称。</span><span class="sxs-lookup"><span data-stu-id="f0b52-107">Gets the display name associated with an email address.</span></span>
+  summary: <span data-ttu-id="174f8-107">获取与电子邮件地址关联的显示名称。</span><span class="sxs-lookup"><span data-stu-id="174f8-107">Gets the display name associated with an email address.</span></span>
   name: displayName
   fullName: displayName
   langs:
@@ -39,7 +39,7 @@ items:
       type:
       - string
 - uid: Outlook_1_7.Office.EmailUser.emailAddress
-  summary: <span data-ttu-id="f0b52-108">获取 SMTP 电子邮件地址。</span><span class="sxs-lookup"><span data-stu-id="f0b52-108">Gets the SMTP email address.</span></span>
+  summary: <span data-ttu-id="174f8-108">获取 SMTP 电子邮件地址。</span><span class="sxs-lookup"><span data-stu-id="174f8-108">Gets the SMTP email address.</span></span>
   name: emailAddress
   fullName: emailAddress
   langs:
