--- a/docs/docs-ref-autogen/outlook_1_3/office.time.yml
+++ b/docs/docs-ref-autogen/outlook_1_3/office.time.yml
@@ -1,10 +1,10 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: b99bcf07ea315a16d3894352db03700c02e247d2
-ms.sourcegitcommit: 016e17422cf62dc9f1de1809666e9244e41cc1a9
+ms.openlocfilehash: a444db6ebcdf8867c9c75c6c26802ce2c2a34482
+ms.sourcegitcommit: b05ee546d9dfbc914c8d1c594d9b206b04780bbc
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 11/09/2018
-ms.locfileid: "26223717"
+ms.lasthandoff: 11/22/2018
+ms.locfileid: "26646032"
 items:
 - uid: Outlook_1_3.Office.Time
   summary: >-
@@ -85,7 +85,7 @@ items:
     <tr><td>[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td>撰写</td></tr>
 
 
-    <tr><td>Errors</td><td>InvalidEndTime-约会结束时间是早于约会开始时间。</td></tr></table>
+    <tr><td>错误</td><td>InvalidEndTime-约会结束时间是早于约会开始时间。</td></tr></table>
 
 
     除了此签名，此方法还具有以下签名：
