--- a/docs/docs-ref-autogen/outlook_1_3/office.contact.yml
+++ b/docs/docs-ref-autogen/outlook_1_3/office.contact.yml
@@ -1,10 +1,10 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: a9c5447511801610393547f58181ce3cce8864d5
-ms.sourcegitcommit: 016e17422cf62dc9f1de1809666e9244e41cc1a9
+ms.openlocfilehash: 49f0cd60eb385eb249a2b71cd13a45d1e748b81e
+ms.sourcegitcommit: b05ee546d9dfbc914c8d1c594d9b206b04780bbc
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 11/09/2018
-ms.locfileid: "26232313"
+ms.lasthandoff: 11/22/2018
+ms.locfileid: "26645444"
 items:
 - uid: Outlook_1_3.Office.Contact
   summary: >-
@@ -19,7 +19,7 @@ items:
     <table><tr><td>[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td>受限</td></tr>
 
 
-    <tr><td>[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td>Read</td></tr></table>
+    <tr><td>[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td>阅读</td></tr></table>
   name: Office.Contact
   fullName: Office.Contact
   langs:
