--- a/docs/docs-ref-autogen/outlook_1_4/office.location.yml
+++ b/docs/docs-ref-autogen/outlook_1_4/office.location.yml
@@ -1,10 +1,10 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: ce1c669093011fa0698957ae06cff14383d537f5
-ms.sourcegitcommit: 016e17422cf62dc9f1de1809666e9244e41cc1a9
+ms.openlocfilehash: f0879ce8b9c43a99c82988889abf661fa9e6980a
+ms.sourcegitcommit: b05ee546d9dfbc914c8d1c594d9b206b04780bbc
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 11/09/2018
-ms.locfileid: "26223682"
+ms.lasthandoff: 11/22/2018
+ms.locfileid: "26649091"
 items:
 - uid: Outlook_1_4.Office.Location
   summary: >-
@@ -80,7 +80,7 @@ items:
     <tr><td>[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td>撰写</td></tr>
 
 
-    <tr><td>Errors</td><td>DataExceedsMaximumSize-location 参数的长度超过 255 个字符。</td></tr></table>
+    <tr><td>错误</td><td>DataExceedsMaximumSize-location 参数的长度超过 255 个字符。</td></tr></table>
 
 
     除了此签名，该方法还具有以下签名：
