--- a/docs/docs-ref-autogen/outlook_1_5/office.recipients.yml
+++ b/docs/docs-ref-autogen/outlook_1_5/office.recipients.yml
@@ -1,10 +1,10 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: c4787b7f6a6e6d7f66b191e8bce9c6e015d129fc
-ms.sourcegitcommit: 016e17422cf62dc9f1de1809666e9244e41cc1a9
+ms.openlocfilehash: 063aa4c0c01bc524da89f1d79f56cc442866dd84
+ms.sourcegitcommit: b05ee546d9dfbc914c8d1c594d9b206b04780bbc
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 11/09/2018
-ms.locfileid: "26230864"
+ms.lasthandoff: 11/22/2018
+ms.locfileid: "26645661"
 items:
 - uid: Outlook_1_5.Office.Recipients
   summary: '\[[API 集： 邮箱 1.1](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]'
@@ -48,7 +48,7 @@ items:
     <tr><td>[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td>撰写</td></tr>
 
 
-    <tr><td>Errors</td><td>NumberOfRecipientsExceeded-收件人数超过 100 个条目。</td></tr></table>
+    <tr><td>错误</td><td>NumberOfRecipientsExceeded-收件人数超过 100 个条目。</td></tr></table>
 
 
     除了此签名，此方法还具有以下签名：
@@ -153,7 +153,7 @@ items:
     <tr><td>[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td>撰写</td></tr>
 
 
-    <tr><td>Errors</td><td>NumberOfRecipientsExceeded-收件人数超过 100 个条目。</td></tr></table>
+    <tr><td>错误</td><td>NumberOfRecipientsExceeded-收件人数超过 100 个条目。</td></tr></table>
 
 
     除了此签名，此方法还具有以下签名：
