--- a/docs/docs-ref-autogen/outlook_1_5/office.time.yml
+++ b/docs/docs-ref-autogen/outlook_1_5/office.time.yml
@@ -1,10 +1,10 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 7253a6278074d62135384457f6f7b5642ebcee42
-ms.sourcegitcommit: 016e17422cf62dc9f1de1809666e9244e41cc1a9
+ms.openlocfilehash: 5d87407167f0eec29bdc945dad3a622cf3b678dc
+ms.sourcegitcommit: b05ee546d9dfbc914c8d1c594d9b206b04780bbc
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 11/09/2018
-ms.locfileid: "26224249"
+ms.lasthandoff: 11/22/2018
+ms.locfileid: "26649133"
 items:
 - uid: Outlook_1_5.Office.Time
   summary: >-
@@ -85,7 +85,7 @@ items:
     <tr><td>[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td>撰写</td></tr>
 
 
-    <tr><td>Errors</td><td>InvalidEndTime-约会结束时间是早于约会开始时间。</td></tr></table>
+    <tr><td>错误</td><td>InvalidEndTime-约会结束时间是早于约会开始时间。</td></tr></table>
 
 
     除了此签名，此方法还具有以下签名：
