--- a/docs/docs-ref-autogen/outlook_1_6/office.appointmentform.yml
+++ b/docs/docs-ref-autogen/outlook_1_6/office.appointmentform.yml
@@ -1,10 +1,10 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 8e82c37f4d0a06f9cd49f0da7f4d015505313caf
-ms.sourcegitcommit: 016e17422cf62dc9f1de1809666e9244e41cc1a9
+ms.openlocfilehash: 8028265868039eb92ad8341cde4e07e1fdf628b6
+ms.sourcegitcommit: b05ee546d9dfbc914c8d1c594d9b206b04780bbc
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 11/09/2018
-ms.locfileid: "26233692"
+ms.lasthandoff: 11/22/2018
+ms.locfileid: "26645647"
 items:
 - uid: Outlook_1_6.Office.AppointmentForm
   summary: >-
@@ -123,7 +123,7 @@ items:
       - string
 - uid: Outlook_1_6.Office.AppointmentForm.optionalAttendees
   summary: >-
-    提供对事件的可选与会者的访问。 对象的类型和访问级别取决于当前项的模式。
+    提供对事件的可选与会者的访问权限。 对象的类型和访问级别取决于当前项目的模式。
 
 
     *阅读模式*
@@ -156,7 +156,7 @@ items:
       - string[] | EmailAddressDetails[]
 - uid: Outlook_1_6.Office.AppointmentForm.requiredAttendees
   summary: >-
-    提供对事件的必需与会者的访问。 对象的类型和访问级别取决于当前项的模式。
+    提供对事件的必需与会者的访问权限。 对象的类型和访问级别取决于当前项目的模式。
 
 
     *阅读模式*
