--- a/docs/docs-ref-autogen/outlook_1_6/office.itemread.yml
+++ b/docs/docs-ref-autogen/outlook_1_6/office.itemread.yml
@@ -1,10 +1,10 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 11e58667b66ae7a061421b83b54381f4232b9b7e
-ms.sourcegitcommit: 016e17422cf62dc9f1de1809666e9244e41cc1a9
+ms.openlocfilehash: df766ea570c926893951d5ead752dcd2cf6ada74
+ms.sourcegitcommit: b05ee546d9dfbc914c8d1c594d9b206b04780bbc
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 11/09/2018
-ms.locfileid: "26227686"
+ms.lasthandoff: 11/22/2018
+ms.locfileid: "26646151"
 items:
 - uid: Outlook_1_6.Office.ItemRead
   summary: >-
@@ -37,7 +37,7 @@ items:
   - Outlook_1_6.Office.ItemRead.subject
 - uid: Outlook_1_6.Office.ItemRead.attachments
   summary: >-
-    作为数组中获取项目的附件。
+    获取项目的附件作为数组。
 
 
     \[[API 集： 邮箱 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
@@ -45,7 +45,7 @@ items:
     <table><tr><td>[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td>ReadItem</td></tr>
 
 
-    <tr><td>[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td>Read</td></tr></table>
+    <tr><td>[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td>阅读</td></tr></table>
 
 
     注意： 某些类型的文件被阻止 Outlook 由于潜在的安全问题，并因此不返回。 有关详细信息，请参阅[在 Outlook 中被阻止的附件](https://support.office.com/article/Blocked-attachments-in-Outlook-434752E1-02D3-4E90-9124-8B81E49A8519)<!-- -->。
@@ -81,7 +81,7 @@ items:
     <table><tr><td>[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td>ReadItem</td></tr>
 
 
-    <tr><td>[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td>Read</td></tr></table>
+    <tr><td>[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td>阅读</td></tr></table>
   name: displayReplyAllForm(formData)
   fullName: displayReplyAllForm
   langs:
@@ -120,7 +120,7 @@ items:
     <table><tr><td>[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td>ReadItem</td></tr>
 
 
-    <tr><td>[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td>Read</td></tr></table>
+    <tr><td>[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td>阅读</td></tr></table>
   name: displayReplyForm(formData)
   fullName: displayReplyForm
   langs:
@@ -139,7 +139,7 @@ items:
       - string | ReplyFormData
 - uid: Outlook_1_6.Office.ItemRead.getEntities
   summary: >-
-    获取在选定的项的正文中找到的实体。
+    获取在所选项目的正文中找到的实体。
 
 
     注意：在 Outlook for iOS 或 Outlook for Android 中不支持此方法。
@@ -150,7 +150,7 @@ items:
     <table><tr><td>[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td>ReadItem</td></tr>
 
 
-    <tr><td>[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td>Read</td></tr></table>
+    <tr><td>[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td>阅读</td></tr></table>
   name: getEntities()
   fullName: getEntities
   langs:
@@ -164,7 +164,7 @@ items:
       description: ''
 - uid: Outlook_1_6.Office.ItemRead.getEntitiesByType
   summary: >-
-    获取选定的项的正文中找到的指定的实体类型的所有实体的数组。
+    获取所选项目的正文中找到的指定实体类型的所有实体的数组。
 
 
     注意：在 Outlook for iOS 或 Outlook for Android 中不支持此方法。
@@ -175,7 +175,7 @@ items:
     <table><tr><td>[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td>受限</td></tr>
 
 
-    <tr><td>[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td>Read</td></tr></table>
+    <tr><td>[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td>阅读</td></tr></table>
 
 
     当使用此方法的最低权限级别受限时，某些实体类型需要 ReadItem 才能进行访问，如下表中所指定。
@@ -192,7 +192,7 @@ items:
     return:
       type:
       - (string | Contact | MeetingSuggestion | PhoneNumber | TaskSuggestion)[]
-      description: 如果 entityType 中传递的值不是有效 EntityType 枚举的成员，则该方法返回 null。 如果没有指定类型的实体的存在于项目的正文中，该方法将返回空数组。 否则，返回的数组中的对象类型取决于请求 entityType 参数中的实体的类型。
+      description: 如果 entityType 中传递的值不是有效 EntityType 枚举的成员，则该方法返回 null。 如果指定类型的任何实体都不存在于该项目的正文中，该方法将返回空数组。 否则，返回的数组中的对象类型取决于请求 entityType 参数中的实体的类型。
     parameters:
     - id: entityType
       description: EntityType 枚举值之一。
@@ -214,7 +214,7 @@ items:
     <table><tr><td>[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td>ReadItem</td></tr>
 
 
-    <tr><td>[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td>Read</td></tr></table>
+    <tr><td>[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td>阅读</td></tr></table>
   name: getFilteredEntitiesByName(name)
   fullName: getFilteredEntitiesByName
   langs:
@@ -250,7 +250,7 @@ items:
     <table><tr><td>[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td>ReadItem</td></tr>
 
 
-    <tr><td>[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td>Read</td></tr></table>
+    <tr><td>[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td>阅读</td></tr></table>
   name: getRegExMatches()
   fullName: getRegExMatches
   langs:
@@ -281,7 +281,7 @@ items:
     <table><tr><td>[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td>ReadItem</td></tr>
 
 
-    <tr><td>[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td>Read</td></tr></table>
+    <tr><td>[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td>阅读</td></tr></table>
   name: getRegExMatchesByName(name)
   fullName: getRegExMatchesByName
   langs:
@@ -300,7 +300,7 @@ items:
       - string
 - uid: Outlook_1_6.Office.ItemRead.getSelectedEntities
   summary: >-
-    获取在用户已选择的突出显示匹配项中找到的实体。突出显示匹配项适用于上下文外接程序。
+    获取在用户已选择的突出显示匹配项中找到的实体。突出显示匹配项适用于上下文加载项。
 
 
     注意：在 Outlook for iOS 或 Outlook for Android 中不支持此方法。
@@ -311,7 +311,7 @@ items:
     <table><tr><td>[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td>ReadItem</td></tr>
 
 
-    <tr><td>[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td>Read</td></tr></table>
+    <tr><td>[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td>阅读</td></tr></table>
   name: getSelectedEntities()
   fullName: getSelectedEntities
   langs:
@@ -342,7 +342,7 @@ items:
     <table><tr><td>[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td>ReadItem</td></tr>
 
 
-    <tr><td>[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td>Read</td></tr></table>
+    <tr><td>[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td>阅读</td></tr></table>
   name: getSelectedRegExMatches()
   fullName: getSelectedRegExMatches
   langs:
@@ -367,7 +367,7 @@ items:
     <table><tr><td>[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td>ReadItem</td></tr>
 
 
-    <tr><td>[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td>Read</td></tr></table>
+    <tr><td>[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td>阅读</td></tr></table>
 
 
     itemClass 属性指定所选项目的邮件类别。以下是邮件或约会项目的默认邮件类别。
@@ -392,7 +392,7 @@ items:
     ItemId 属性不可用在撰写模式。 如果所需的项标识符，saveAsync 方法可用于将项目保存到存储库，将返回的项标识符的 AsyncResult.value 参数的回调函数中。
 
 
-    注意： itemId 属性返回的标识符是 Exchange Web 服务的项标识符相同。 ItemId 属性不与 Outlook 条目 ID 或使用 Outlook REST API 的 ID。 使用此值的 REST API 调用之前，应将其转换使用 Office.context.mailbox.convertToRestId。 有关详细信息，请参阅[使用 Outlook REST Api 从 Outlook 外接程序](https://docs.microsoft.com/outlook/add-ins/use-rest-api#get-the-item-id)<!-- -->。
+    注意： itemId 属性返回的标识符是 Exchange Web 服务的项标识符相同。 ItemId 属性不与 Outlook 条目 ID 或使用 Outlook REST API 的 ID。 使用此值进行 REST API 调用前，应使用 Office.context.mailbox.convertToRestId 对它进行转换。 有关详细信息，请参阅[使用 Outlook REST Api 从 Outlook 外接程序](https://docs.microsoft.com/outlook/add-ins/use-rest-api#get-the-item-id)<!-- -->。
 
 
     \[[API 集： 邮箱 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
@@ -400,7 +400,7 @@ items:
     <table><tr><td>[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td>ReadItem</td></tr>
 
 
-    <tr><td>[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td>Read</td></tr></table>
+    <tr><td>[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td>阅读</td></tr></table>
   name: itemId
   fullName: itemId
   langs:
@@ -424,7 +424,7 @@ items:
     <table><tr><td>[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td>ReadItem</td></tr>
 
 
-    <tr><td>[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td>Read</td></tr></table>
+    <tr><td>[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td>阅读</td></tr></table>
   name: normalizedSubject
   fullName: normalizedSubject
   langs:
