--- a/docs/docs-ref-autogen/outlook_1_6/office.mailbox.yml
+++ b/docs/docs-ref-autogen/outlook_1_6/office.mailbox.yml
@@ -1,10 +1,10 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 0cd63164df1ae9b7352849c70067b9f134c55676
-ms.sourcegitcommit: 016e17422cf62dc9f1de1809666e9244e41cc1a9
+ms.openlocfilehash: 83a6709d8770501e2281a52df5539d234e805676
+ms.sourcegitcommit: b05ee546d9dfbc914c8d1c594d9b206b04780bbc
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 11/09/2018
-ms.locfileid: "26223332"
+ms.lasthandoff: 11/22/2018
+ms.locfileid: "26647901"
 items:
 - uid: Outlook_1_6.Office.Mailbox
   summary: >-
@@ -378,7 +378,7 @@ items:
     <table><tr><td>[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td>ReadItem</td></tr>
 
 
-    <tr><td>[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td>Read</td></tr></table>
+    <tr><td>[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td>阅读</td></tr></table>
   name: displayNewAppointmentForm(parameters)
   fullName: displayNewAppointmentForm
   langs:
@@ -411,7 +411,7 @@ items:
     <table><tr><td>[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td>ReadItem</td></tr>
 
 
-    <tr><td>[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td>Read</td></tr></table>
+    <tr><td>[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td>阅读</td></tr></table>
   name: displayNewMessageForm(parameters)
   fullName: displayNewMessageForm
   langs:
@@ -426,7 +426,7 @@ items:
     parameters:
     - id: parameters
       description: >-
-        字典，其中包含要填写新表单中为用户的所有值。 所有参数都是可选的。
+        字典，其中包含要填写新表单中为用户的所有值。 所有参数都是可选参数。
 
 
         toRecipients： 一个包含电子邮件地址或在收件人行上的收件人的每个包含[Office.EmailAddressDetails](xref:Outlook_1_6.Office.EmailAddressDetails)对象的数组的字符串数组。 数组限制为最多 100 个条目。
@@ -459,7 +459,7 @@ items:
         attachments.isInline： 仅使用类型设置为文件。 如果为 true，指示附件将显示嵌入在邮件正文中，并且不应在附件列表中显示。
 
 
-        attachments.itemId： 如果类型设置仅使用到项目。 您想要附加到新邮件的现有电子邮件 EWS 项 id。 字符串最长为 100 个字符。
+        attachments.itemId： 如果类型设置仅使用到项目。 要附加到新邮件的现有电子邮件的 EWS 项 ID。 最长为 100 个字符的字符串。
       type:
       - any
 - uid: Outlook_1_6.Office.Mailbox.ewsUrl
@@ -613,7 +613,7 @@ items:
     向承载用户邮箱的 Exchange 服务器上的 Exchange Web Services (EWS) 服务发出异步请求。
 
 
-    在这些情况下外, 接程序应使用 REST Api 改为访问用户的邮箱。
+    在这些情况下，加载项应该使用 REST API 来改为访问用户的邮箱。
 
 
     makeEwsRequestAsync 方法代表外接程序将 EWS 请求发送到 Exchange。
@@ -678,7 +678,7 @@ items:
       type:
       - any
     - id: callback
-      description: 该方法完成后，使用类型 Office.AsyncResult 的单个参数调用中的 callback 参数传递的函数。 `value`结果属性是以字符串形式提供 EWS 请求的 XML。 如果结果的大小超过 1 MB，而被返回一条错误消息。
+      description: 该方法完成后，使用类型 Office.AsyncResult 的单个参数调用中的 callback 参数传递的函数。 `value`结果属性是以字符串形式提供 EWS 请求的 XML。 如果结果大小超过 1 MB，则改为返回一条错误消息。
       type:
       - '(result: AsyncResult<string>) => void'
     - id: userContext
@@ -687,7 +687,7 @@ items:
       - any
 - uid: Outlook_1_6.Office.Mailbox.removeHandlerAsync
   summary: >-
-    删除事件处理程序支持的事件。
+    删除支持事件的事件处理程序。
 
 
     目前，仅支持的事件类型是`Office.EventType.ItemChanged` <!-- -->。
@@ -712,7 +712,7 @@ items:
       description: ''
     parameters:
     - id: eventType
-      description: 应取消处理程序的事件。
+      description: 应撤销处理程序的事件。
       type:
       - Office.EventType
     - id: handler
