--- a/docs/docs-ref-autogen/outlook_1_7/office.appointmentread.yml
+++ b/docs/docs-ref-autogen/outlook_1_7/office.appointmentread.yml
@@ -1,10 +1,10 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 99b9b930e1fdb78560c142a4fa0af1d44acb4d3c
-ms.sourcegitcommit: 016e17422cf62dc9f1de1809666e9244e41cc1a9
+ms.openlocfilehash: 0a601fdbbc662fba93eedd41722ae62affb93d49
+ms.sourcegitcommit: b05ee546d9dfbc914c8d1c594d9b206b04780bbc
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 11/09/2018
-ms.locfileid: "26228260"
+ms.lasthandoff: 11/22/2018
+ms.locfileid: "26646347"
 items:
 - uid: Outlook_1_7.Office.AppointmentRead
   summary: >-
@@ -101,7 +101,7 @@ items:
       - '(result: AsyncResult<void>) => void'
 - uid: Outlook_1_7.Office.AppointmentRead.attachments
   summary: >-
-    作为数组中获取项目的附件。
+    获取项目的附件作为数组。
 
 
     \[[API 集： 邮箱 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
@@ -296,7 +296,7 @@ items:
       - Date
 - uid: Outlook_1_7.Office.AppointmentRead.getEntities
   summary: >-
-    获取在选定的项的正文中找到的实体。
+    获取在所选项目的正文中找到的实体。
 
 
     注意：在 Outlook for iOS 或 Outlook for Android 中不支持此方法。
@@ -321,7 +321,7 @@ items:
       description: ''
 - uid: Outlook_1_7.Office.AppointmentRead.getEntitiesByType
   summary: >-
-    获取选定的项的正文中找到的指定的实体类型的所有实体的数组。
+    获取所选项目的正文中找到的指定实体类型的所有实体的数组。
 
 
     注意：在 Outlook for iOS 或 Outlook for Android 中不支持此方法。
@@ -349,7 +349,7 @@ items:
     return:
       type:
       - (string | Contact | MeetingSuggestion | PhoneNumber | TaskSuggestion)[]
-      description: 如果 entityType 中传递的值不是有效 EntityType 枚举的成员，则该方法返回 null。 如果没有指定类型的实体的存在于项目的正文中，该方法将返回空数组。 否则，返回的数组中的对象类型取决于请求 entityType 参数中的实体的类型。
+      description: 如果 entityType 中传递的值不是有效 EntityType 枚举的成员，则该方法返回 null。 如果指定类型的任何实体都不存在于该项目的正文中，该方法将返回空数组。 否则，返回的数组中的对象类型取决于请求 entityType 参数中的实体的类型。
     parameters:
     - id: entityType
       description: EntityType 枚举值之一。
@@ -457,7 +457,7 @@ items:
       - string
 - uid: Outlook_1_7.Office.AppointmentRead.getSelectedEntities
   summary: >-
-    获取在用户已选择的突出显示匹配项中找到的实体。突出显示匹配项适用于上下文外接程序。
+    获取在用户已选择的突出显示匹配项中找到的实体。突出显示匹配项适用于上下文加载项。
 
 
     注意：在 Outlook for iOS 或 Outlook for Android 中不支持此方法。
@@ -549,7 +549,7 @@ items:
     ItemId 属性不可用在撰写模式。 如果所需的项标识符，saveAsync 方法可用于将项目保存到存储库，将返回的项标识符的 AsyncResult.value 参数的回调函数中。
 
 
-    注意： itemId 属性返回的标识符是 Exchange Web 服务的项标识符相同。 ItemId 属性不与 Outlook 条目 ID 或使用 Outlook REST API 的 ID。 使用此值的 REST API 调用之前，应将其转换使用 Office.context.mailbox.convertToRestId。 有关详细信息，请参阅[使用 Outlook REST Api 从 Outlook 外接程序](https://docs.microsoft.com/outlook/add-ins/use-rest-api#get-the-item-id)<!-- -->。
+    注意： itemId 属性返回的标识符是 Exchange Web 服务的项标识符相同。 ItemId 属性不与 Outlook 条目 ID 或使用 Outlook REST API 的 ID。 使用此值进行 REST API 调用前，应使用 Office.context.mailbox.convertToRestId 对它进行转换。 有关详细信息，请参阅[使用 Outlook REST Api 从 Outlook 外接程序](https://docs.microsoft.com/outlook/add-ins/use-rest-api#get-the-item-id)<!-- -->。
 
 
     \[[API 集： 邮箱 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
@@ -626,7 +626,7 @@ items:
       type:
       - '(result: AsyncResult<Office.CustomProperties>) => void'
     - id: userContext
-      description: 可选。 开发人员可以提供他们想要访问的回调函数中的任何对象。 AsyncResult.asyncContext 属性的回调函数中，可以访问此对象。
+      description: 可选。 开发人员可以提供他们想要在回调函数中访问的任何对象。 AsyncResult.asyncContext 属性的回调函数中，可以访问此对象。
       type:
       - any
 - uid: Outlook_1_7.Office.AppointmentRead.location
@@ -700,7 +700,7 @@ items:
       - outlook.Office.NotificationMessages
 - uid: Outlook_1_7.Office.AppointmentRead.optionalAttendees
   summary: >-
-    提供对事件的可选与会者的访问。 对象的类型和访问级别取决于当前项的模式。
+    提供对事件的可选与会者的访问权限。 对象的类型和访问级别取决于当前项目的模式。
 
 
     OptionalAttendees 属性返回包含每个可选与会者加入会议的[Office.EmailAddressDetails](xref:Outlook_1_7.Office.EmailAddressDetails)对象的数组。
@@ -745,10 +745,10 @@ items:
       - EmailAddressDetails
 - uid: Outlook_1_7.Office.AppointmentRead.recurrence
   summary: >-
-    获取约会的定期模式。 获取会议请求的定期模式。
+    获取约会的定期模式。 获取或设置会议请求的定期模式。
 
 
-    如果项目为一系列或一系列中的实例的定期属性返回定期约会或会议请求的定期的对象。 `null`将返回单个约会和会议请求的单个约会。
+    如果项目为一系列或一系列中的实例的定期属性返回定期约会或会议请求的定期的对象。 针对单个约会和单个约会的会议请求返回 `null`。
 
 
     注意： 会议请求具有 IPM itemClass 的值。Schedule.Meeting.Request。
@@ -775,7 +775,7 @@ items:
       - Recurrence
 - uid: Outlook_1_7.Office.AppointmentRead.removeHandlerAsync
   summary: >-
-    删除事件处理程序支持的事件。
+    删除支持事件的事件处理程序。
 
 
     当前受支持的事件类型的`Office.EventType.AppointmentTimeChanged` <!-- -->， `Office.EventType.RecipientsChanged` <!-- -->，和`Office.EventType.RecurrenceChanged` <!-- -->。
@@ -806,7 +806,7 @@ items:
       description: ''
     parameters:
     - id: eventType
-      description: 应取消处理程序的事件。
+      description: 应撤销处理程序的事件。
       type:
       - EventType
     - id: handler
@@ -823,7 +823,7 @@ items:
       - '(result: AsyncResult<void>) => void'
 - uid: Outlook_1_7.Office.AppointmentRead.requiredAttendees
   summary: >-
-    提供对事件的必需与会者的访问。 对象的类型和访问级别取决于当前项的模式。
+    提供对事件的必需与会者的访问权限。 对象的类型和访问级别取决于当前项目的模式。
 
 
     RequiredAttendees 属性返回一个数组，包含[Office.EmailAddressDetails](xref:Outlook_1_7.Office.EmailAddressDetails)对象的每个必需与会者加入会议。
@@ -847,13 +847,13 @@ items:
       - EmailAddressDetails[]
 - uid: Outlook_1_7.Office.AppointmentRead.seriesId
   summary: >-
-    获取实例所属的系列的 id。
+    获取实例所属的系列的 ID。
 
 
     在 OWA 和 Outlook 中，可能指向返回此项目所属的父 （系列） 项的 Exchange Web Services (EWS) ID。 但是，在 iOS 和 Android，可能指向返回父项的 REST ID。
 
 
-    注意： 可能指向属性返回的标识符是 Exchange Web 服务的项标识符相同。 可能指向属性不是与 Outlook Id 使用 Outlook REST API 相同的。 使用此值的 REST API 调用之前，应将其转换使用 Office.context.mailbox.convertToRestId。 有关详细信息，请参阅[使用 Outlook REST Api 从 Outlook 外接程序](https://docs.microsoft.com/outlook/add-ins/use-rest-api)<!-- -->。
+    注意： 可能指向属性返回的标识符是 Exchange Web 服务的项标识符相同。 可能指向属性不是与 Outlook Id 使用 Outlook REST API 相同的。 使用此值进行 REST API 调用前，应使用 Office.context.mailbox.convertToRestId 对它进行转换。 有关详细信息，请参阅[使用 Outlook REST Api 从 Outlook 外接程序](https://docs.microsoft.com/outlook/add-ins/use-rest-api)<!-- -->。
 
 
     可能指向属性返回 null 没有父项目，如单个约会系列项目的项目或会议请求，并返回 undefined 不是会议请求的其他任何项。
