--- a/docs/docs-ref-autogen/outlook_1_7/office.item.yml
+++ b/docs/docs-ref-autogen/outlook_1_7/office.item.yml
@@ -1,10 +1,10 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 07bb0b262332e2c6d2eaf38401fa364418333066
-ms.sourcegitcommit: 016e17422cf62dc9f1de1809666e9244e41cc1a9
+ms.openlocfilehash: 9c97545bc426e47053202427c47147d7cbe46779
+ms.sourcegitcommit: b05ee546d9dfbc914c8d1c594d9b206b04780bbc
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 11/09/2018
-ms.locfileid: "26221904"
+ms.lasthandoff: 11/22/2018
+ms.locfileid: "26646039"
 items:
 - uid: Outlook_1_7.Office.Item
   summary: >-
@@ -113,7 +113,7 @@ items:
     <table><tr><td>[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td>ReadItem</td></tr>
 
 
-    <tr><td>[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td>Read</td></tr></table>
+    <tr><td>[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td>阅读</td></tr></table>
   name: dateTimeCreated
   fullName: dateTimeCreated
   langs:
@@ -134,7 +134,7 @@ items:
     <table><tr><td>[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td>ReadItem</td></tr>
 
 
-    <tr><td>[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td>Read</td></tr></table>
+    <tr><td>[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td>阅读</td></tr></table>
 
 
     注意：在 Outlook for iOS 或 Outlook for Android 中不支持此成员。
@@ -206,7 +206,7 @@ items:
       type:
       - '(result: AsyncResult<Office.CustomProperties>) => void'
     - id: userContext
-      description: 可选。 开发人员可以提供他们想要访问的回调函数中的任何对象。 AsyncResult.asyncContext 属性的回调函数中，可以访问此对象。
+      description: 可选。 开发人员可以提供他们想要在回调函数中访问的任何对象。 AsyncResult.asyncContext 属性的回调函数中，可以访问此对象。
       type:
       - any
 - uid: Outlook_1_7.Office.Item.notificationMessages
@@ -232,10 +232,10 @@ items:
       - outlook.Office.NotificationMessages
 - uid: Outlook_1_7.Office.Item.recurrence
   summary: >-
-    获取或设置约会的定期模式。 获取会议请求的定期模式。 阅读和撰写的约会项目的模式。 读取模式的会议请求项目。
+    获取或设置约会的定期模式。 获取或设置会议请求的定期模式。 阅读撰写约会项目的模式。 会议请求项目的阅读模式。
 
 
-    如果项目为一系列或一系列中的实例的定期属性返回定期约会或会议请求的定期的对象。 `null`将返回单个约会和会议请求的单个约会。 `undefined`将返回不是会议请求的消息。
+    如果项目为一系列或一系列中的实例的定期属性返回定期约会或会议请求的定期的对象。 针对单个约会和单个约会的会议请求返回 `null`。 针对非会议请求的邮件返回 `undefined`。
 
 
     注意： 会议请求具有 IPM itemClass 的值。Schedule.Meeting.Request。
@@ -262,7 +262,7 @@ items:
       - outlook.Office.Recurrence
 - uid: Outlook_1_7.Office.Item.removeHandlerAsync
   summary: >-
-    删除事件处理程序支持的事件。
+    删除支持事件的事件处理程序。
 
 
     当前受支持的事件类型的`Office.EventType.AppointmentTimeChanged` <!-- -->， `Office.EventType.RecipientsChanged` <!-- -->，和`Office.EventType.RecurrenceChanged` <!-- -->。
@@ -293,7 +293,7 @@ items:
       description: ''
     parameters:
     - id: eventType
-      description: 应取消处理程序的事件。
+      description: 应撤销处理程序的事件。
       type:
       - Office.EventType
     - id: handler
@@ -310,13 +310,13 @@ items:
       - '(result: AsyncResult<void>) => void'
 - uid: Outlook_1_7.Office.Item.seriesId
   summary: >-
-    获取实例所属的系列的 id。
+    获取实例所属的系列的 ID。
 
 
     在 OWA 和 Outlook 中，可能指向返回此项目所属的父 （系列） 项的 Exchange Web Services (EWS) ID。 但是，在 iOS 和 Android，可能指向返回父项的 REST ID。
 
 
-    注意： 可能指向属性返回的标识符是 Exchange Web 服务的项标识符相同。 可能指向属性不是与 Outlook Id 使用 Outlook REST API 相同的。 使用此值的 REST API 调用之前，应将其转换使用 Office.context.mailbox.convertToRestId。 有关详细信息，请参阅[使用 Outlook REST Api 从 Outlook 外接程序](https://docs.microsoft.com/outlook/add-ins/use-rest-api)<!-- -->。
+    注意： 可能指向属性返回的标识符是 Exchange Web 服务的项标识符相同。 可能指向属性不是与 Outlook Id 使用 Outlook REST API 相同的。 使用此值进行 REST API 调用前，应使用 Office.context.mailbox.convertToRestId 对它进行转换。 有关详细信息，请参阅[使用 Outlook REST Api 从 Outlook 外接程序](https://docs.microsoft.com/outlook/add-ins/use-rest-api)<!-- -->。
 
 
     可能指向属性返回 null 没有父项目，如单个约会系列项目的项目或会议请求，并返回 undefined 不是会议请求的其他任何项。
