commit translated contents

--- a/docs/docs-ref-autogen/outlook/office.internetheaders.yml
+++ b/docs/docs-ref-autogen/outlook/office.internetheaders.yml
@@ -1,14 +1,14 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 62581f36e169e3891c95ae9eff5d576c36949fdf
-ms.sourcegitcommit: 31847d2ea6be78b8f473dfbfb0a575fdecd877be
+ms.openlocfilehash: ed24c93d4e7021ddd37e7fc0ceb662c36c2b18db
+ms.sourcegitcommit: c756c5499da5aad3736cc71573ac35f9ca3d6738
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 11/13/2018
-ms.locfileid: "26297922"
+ms.lasthandoff: 12/19/2018
+ms.locfileid: "27378209"
 items:
 - uid: outlook.Office.InternetHeaders
   summary: >-
-    InternetHeaders 对象代表属性保留项目离开 Exchange 之后和转换为 MIME 邮件。 这些属性存储为 MIME 邮件中的 x 标头。
+    InternetHeaders 对象代表邮件项保留 Exchange 并转换为 MIME 邮件后保留的属性。 这些属性存储为 MIME 邮件中的 x 标头。
 
 
     InternetHeaders 存储为单独对每个项目的键/值对。
