--- a/docs/docs-ref-autogen/outlook/office.mailbox.yml
+++ b/docs/docs-ref-autogen/outlook/office.mailbox.yml
@@ -1,10 +1,10 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 3d47fa967839eebb774534e77d02c604686ac83e
-ms.sourcegitcommit: b05ee546d9dfbc914c8d1c594d9b206b04780bbc
+ms.openlocfilehash: 13cf5101f05b6f2a97614e1ad209ebeecb0e2c01
+ms.sourcegitcommit: c756c5499da5aad3736cc71573ac35f9ca3d6738
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 11/22/2018
-ms.locfileid: "26646424"
+ms.lasthandoff: 12/19/2018
+ms.locfileid: "27378223"
 items:
 - uid: outlook.Office.Mailbox
   summary: >-
@@ -221,7 +221,7 @@ items:
     <tr><td>[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td>撰写或阅读</td></tr></table>
 
 
-    项目 Id 检索通过 EWS 或通过将 itemId 属性使用比使用 REST Api 的格式为不同格式 (如[Outlook 邮件 API](https://docs.microsoft.com/previous-versions/office/office-365-api/api/version-2.0/mail-rest-operations)或[Microsoft Graph](http://graph.microsoft.io/)<!-- -->。 Rest，convertToRestId 方法将 EWS 格式 ID 转换为正确的格式。
+    项目 Id 检索通过 EWS 或通过将 itemId 属性使用比使用 REST Api 的格式为不同格式 (如[Outlook 邮件 API](https://docs.microsoft.com/previous-versions/office/office-365-api/api/version-2.0/mail-rest-operations)或[Microsoft Graph](https://graph.microsoft.io/)<!-- -->。 Rest，convertToRestId 方法将 EWS 格式 ID 转换为正确的格式。
 
     #### <a name="examples"></a>示例
 
